# Dependecies_Algorithm_V2_py

./: .env.example  .gitignore  CONTRIBUTING.md  DependencyMappingEngine.pptx  README.md  SECURITY.md  api.py  engine.py  inference.py  llm_normalizer.py  pyproject.toml  repl.py  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md  FAQ.md  INSTALLATION.md
src/vela_causal/: __init__.py  api.py  engine.py  extractor.py  inference.py  llm_normalizer.py  repl.py  tokenizer.py
tests/: test_engine.py
